@@ -28,6 +28,9 @@ HOW TO UPDATE?
 
 Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.5.x
 
+Breaking Changes:
+- close_popup: Now requires the name of the popup to be added.
+
 
 -----------------------------------------------------------------------
  VERSION 0.5.53
